--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<h2>Welcome to my webpage</h2>
-		<h2 class="subtitle">by:nathan ordanay</h2>
-		<p>hello my name is nathan </p>
+		<h2 class="subtitle">By:nathan ordanay</h2>
+		<p>Hello my name is nathan </p>
 		<a href="http://www.google.com" target="_blank">click me </a>
 		<img src="http://media.caranddriver.com/images/media/51/dissected-lotus-based-infiniti-emerg-e-sports-car-concept-top-image-photo-451994-s-original.jpg"></img>
 		<a href="http://www.instagram.com/the_red_hood17">check out my instagram</a>
